[gd_scene load_steps=12 format=3 uid="uid://dgurew8fui5pv"]

[ext_resource type="FontFile" uid="uid://b3f6o2t3fsb05" path="res://external/font/RobotoCondensed-Light.ttf" id="1_tgh6m"]
[ext_resource type="Script" path="res://godot/scr/uiMenuGenerateNewSector.gd" id="2_x5il4"]
[ext_resource type="AudioStream" uid="uid://u57hkwqqf64b" path="res://external/aud/fx/select_007.ogg" id="3_pj0s8"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_fxbg0"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_5c1fb"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_moh0b"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_n340r"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_xvdlj"]

[sub_resource type="Animation" id="Animation_f2c4x"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:theme_override_colors/font_color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0.392157)]
}

[sub_resource type="Animation" id="Animation_twdhm"]
resource_name = "uiMenuGenerateHovered"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:theme_override_colors/font_color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0.392157), Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_5bkib"]
_data = {
"RESET": SubResource("Animation_f2c4x"),
"uiMenuGenerateHovered": SubResource("Animation_twdhm")
}

[node name="uiMenuGenerateNewSector" type="Button"]
offset_right = 256.0
offset_bottom = 32.0
theme_override_colors/font_color = Color(1, 1, 1, 0.392157)
theme_override_fonts/font = ExtResource("1_tgh6m")
theme_override_font_sizes/font_size = 15
theme_override_styles/normal = SubResource("StyleBoxEmpty_fxbg0")
theme_override_styles/hover = SubResource("StyleBoxEmpty_5c1fb")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_moh0b")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_n340r")
theme_override_styles/focus = SubResource("StyleBoxEmpty_xvdlj")
text = "DISCOVER A SECTOR
"
flat = true
script = ExtResource("2_x5il4")

[node name="uiMenuGenerateNewSectorAnimation" type="AnimationPlayer" parent="."]
autoplay = "uiMenuStartHighlight"
playback_process_mode = 0
libraries = {
"": SubResource("AnimationLibrary_5bkib")
}

[node name="uiMenuGenerateSFX" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_pj0s8")
bus = &"SFX"

[connection signal="mouse_entered" from="." to="." method="_whenMouseEnteredButton" flags=18]
[connection signal="mouse_exited" from="." to="." method="_whenMouseExitedButton" flags=18]
[connection signal="pressed" from="." to="." method="_whenMousePressed"]
